--- a/biblioteca/src/app/app.component.html
+++ b/biblioteca/src/app/app.component.html
@@ -1,7 +1,23 @@
 
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <body>
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.122.0">
+    <title>Biblioteca</title>
+  </head>
+  <body >
     <router-outlet />
+
+    <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
+      <p class="mb-0">
+        <a href="#">Back to top</a>
+      </p>
+    </footer>
   </body>
+
 </html>
