--- a/biblioteca/src/app/pages/livros/livros.component.html
+++ b/biblioteca/src/app/pages/livros/livros.component.html
@@ -26,7 +26,7 @@
   <div class="nav-scroller py-1 mb-3 border-bottom">
     <nav class="nav nav-underline justify-content-between">
       <a class="nav-item nav-link link-body-emphasis active" href="#">Box</a>
-      <a class="nav-item nav-link link-body-emphasis active" data-bs-toggle="collapse" href="#adicionaBox" ><i class="bi bi-node-plus"></i></a>
+      <a class="nav-item nav-link link-body-emphasis active btn btn-success" data-bs-toggle="collapse" href="#adicionaBox" ><i class="bi bi-node-plus"></i></a>
     </nav>
   </div>
 </div>
@@ -37,9 +37,7 @@
       <input class="form-control" type="text" name="nomeBox" id="nomeBox" [(ngModel)]="nomeBox.nome">
       <button class="btn btn-primary btn-sm" (click)="adicionarBox()">Adicionar</button>
     </div>
-
   </div>
-
 </main>
 
 <main class="container" *ngFor="let box of boxs">
@@ -47,13 +45,15 @@
     <div class="col-lg-6 px-0">
       <h1 class="display-4 fst-italic">{{box.nome_box}}</h1>
     </div>
+    <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#adicionaLivro" (click)="idBox = box.id_box"><i class="bi bi-journal-plus"></i></button>
   </div>
+
   <div class="row mb-2">
     <div class="col col-md-6" *ngFor="let livro of box.livros">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <h3 class="mb-0">{{ livro.nome_livro }}</h3>
-          <div class="mb-1 text-body-secondary">Nov 12</div>
+          <div class="mb-1 text-body-secondary"> {{livro.status == 1? "Leitura Concluida":"" }} </div>
           <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
           <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
             Continue lendo
@@ -67,3 +67,25 @@
     </div>
   </div>
 </main>
+
+<!--modal-->
+<div class="modal fade" id="adicionaLivro" tabindex="-1" aria-labelledby="adicionaLivroLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="adicionaLivroLabel">Adicionar Livros ao Box:</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="col-md-6">
+          <label for="nomeLivro" class="form-label">Livro</label>
+          <input type="text" class="form-control" id="nomeLivro" [(ngModel)]="nomeLivro">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+        <button type="button" class="btn btn-primary" (click)="adicionarLivro()">Salvar</button>
+      </div>
+    </div>
+  </div>
+</div>
