--- a/biblioteca/src/app/pages/livros/livros.component.html
+++ b/biblioteca/src/app/pages/livros/livros.component.html
@@ -53,8 +53,8 @@
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <h3 class="mb-0">{{ livro.nome_livro }}</h3>
-          <div class="mb-1 text-body-secondary"> {{livro.status == 1? "Leitura Concluida":"" }} </div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <div class="mb-1 text-body-secondary"> {{livro.status}} </div>
+          <p class="card-text mb-auto"> {{livro.descricao}} </p>
           <a href="#" class="icon-link gap-1 icon-link-hover stretched-link">
             Continue lendo
             <svg class="bi"><use xlink:href="#chevron-right"/></svg>
