--- a/biblioteca/src/app/pages/livros/livros.component.html
+++ b/biblioteca/src/app/pages/livros/livros.component.html
@@ -1,11 +1,12 @@
 
 <div class="container">
   <header class="border-bottom lh-1 py-3">
-    <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
+    <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis d-flex">
       <div class="col-lg-6 px-0">
         <h1 class="display-4 fst-italic">Biblioteca virtual</h1>
         <p class="lead my-3">Cada livro registrado possui uma versão fisica.</p>
       </div>
+      <img class="position-relative" width="382,5" height="180" src="../../../assets/images/biblioteca.png" alt="">
     </div>
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
